--- a/PageConnection.html
+++ b/PageConnection.html
@@ -24,20 +24,22 @@
   <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <label for="form-label" class="form-1">Adresse email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <div class="mb-3 col-md-9">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <label for="form-label" class="form-1">Mot de passe</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" >
+
       </div>
       <div class="mb-3 form-check">
         <input type="radio" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
       </div>
       <button type="submit" class="btn bg-success text-white col-md-6">Connexion</button>
-      <div id="inscrpition" class="form-text">Inscrivez-vous</div>
-      <div id="questions" class="form-text">Questions ?</div>
+      <br><br>
+      <a href="inscription.html" class="link-success d-flex justify-content-between">Inscrivez-vous</a>
+      <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
     </form>
     </div>
   </body>
