ajout d'un style.css et header fixe

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         class="d-block w-100"
         alt="..."
       />
-      <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+      <div class="carousel-caption d-none d-md-block align-items-center">
+        <h2>Bienvenue dans l’Espace entreprise-PAO</h2>
+        <p>Découvrez les différentes possibilités qui s'offre à vous.</p>
       </div>
     </div>
 
@@ -108,8 +108,8 @@
         alt="..."
       />
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <h2>Ici, commandez un large choix de produits</h2>
+        <p>Grâce à notre service v</p>
       </div>
     </div>
 
