--- a/questions.html
+++ b/questions.html
@@ -24,23 +24,27 @@
   <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-success">Enseignent</button>
-            <button type="button" class="btn btn-success">Eleve</button>
-          </div>
           <br><br>
         <label for="form-label" class="form-1">Adresse email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div class="form-outline">
+          <input type="password" id="typePassword" class="form-control" />
+          <label class="form-label" for="typePassword">exemple</label>
+        </div>
       </div>
       <div class="mb-3 col-md-9">
-        <label for="form-label" class="form-1">Mot de passe</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" >
+        Qu'elle est votre questions ?
+        <br>
+        <select name="pets" id="pet-select">
+          <option value="pasconnecter">Je n'arrive pas à me connecter.</option>
+          <option value="motdepasse">J'ai oublié mon mot de passe.</option>
+          <option value="fonctionnepas">Le site ne fonctionne pas.</option>
+          <option value="bug">J'ai un bug.</option>
+          <option value="autres">Autres.</option>
+      </select>
+      <div class="form-outline">
+        <textarea class="form-control" id="textAreaExample" rows="4">Ecrire un message.</textarea>
       </div>
-      <div class="mb-3 col-md-9">
-        <label for="form-label" class="form-1">Confirmer votre mot de passe</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" >
-      </div>
-      <button type="submit" class="btn bg-success text-white col-md-6">Création du compte</button>
+      <button type="submit" class="btn bg-success text-white col-md-6">Envoyer votre question</button>
       <br><br>
       <a href="PageConnection.html" class="link-success d-flex justify-content-between">Vous avez déjà un compte ?</a>
       <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
