90%fini page inscription

--- a/inscription.html
+++ b/inscription.html
@@ -21,7 +21,7 @@
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
-  <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
+  <img src="img/LogoCPNV.png" style="max-width: 50vh" />
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
         <div class="btn-group" role="group">
