--- a/message.html
+++ b/message.html
@@ -21,10 +21,14 @@
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
-  <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
+  <img src="img/LogoCPNV.png" style="max-width: 50vh" />
     <form class="col-md-5" >
+      <b>Votre message à bien été envoyé !</b>
+        <p>Nous allons vous répondre le plus rapidement possible.</p>
       <div class="mb-2 col-md-9">
-         
+        <a href="inscription.html">
+          <button type="submit" class="btn bg-success text-white col-md-6">Revenir à la page de connection</button>
+        </a>
   </body>
 
   <!-- MDB -->
