--- a/PageConnection.html
+++ b/PageConnection.html
@@ -21,7 +21,7 @@
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
-  <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
+  <img src="img/LogoCPNV.png" style="max-width: 50vh" />
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
         <label for="form-label" class="form-1">Adresse email</label>
@@ -40,6 +40,7 @@
       <br><br>
       <a href="inscription.html" class="link-success d-flex justify-content-between">Inscrivez-vous</a>
       <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
+
     </form>
     </div>
   </body>
