--- a/questions.html
+++ b/questions.html
@@ -21,7 +21,7 @@
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
-  <img src="img/LogoCPNV.png" class="img-thumbnail" style="max-width: 50vh" />
+  <img src="img/LogoCPNV.png" style="max-width: 50vh" />
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
           <br><br>
@@ -44,8 +44,9 @@
       <div class="form-outline">
         <textarea class="form-control" id="textAreaExample" rows="4">Ecrire un message.</textarea>
       </div>
-      <button type="submit" class="btn bg-success text-white col-md-6">Envoyer votre question</button>
-    </form>
+      <a href="inscription.html">
+        <button type="submit" class="btn bg-success text-white col-md-6">Envoyer votre question</button>
+      </a>
     </div>
   </body>
 
