--- a/message.html
+++ b/message.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Questions</title>
+    <title>Message</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -26,8 +26,8 @@
       <b>Votre message à bien été envoyé !</b>
         <p>Nous allons vous répondre le plus rapidement possible.</p>
       <div class="mb-2 col-md-9">
-        <a href="inscription.html">
-          <button type="submit" class="btn bg-success text-white col-md-6">Revenir à la page de connection</button>
+        <a class="btn bg-success text-white col-md-6" href="PageConnection.html">
+        Revenir à la page de connection
         </a>
   </body>
 
