--- a/questions.html
+++ b/questions.html
@@ -44,9 +44,10 @@
       <div class="form-outline">
         <textarea class="form-control" id="textAreaExample" rows="4">Ecrire un message.</textarea>
       </div>
-      <a href="inscription.html">
-        <button type="submit" class="btn bg-success text-white col-md-6">Envoyer votre question</button>
+      <a class="btn bg-success text-white col-md-6" href="message.html">
+        Envoyer votre question
       </a>
+
     </div>
   </body>
 
