--- a/PageConnection.html
+++ b/PageConnection.html
@@ -36,7 +36,9 @@
         <input type="radio" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
       </div>
-      <button type="submit" class="btn bg-success text-white col-md-6">Connexion</button>
+      <a class="btn bg-success text-white col-md-6" href="index.html">
+        Connexion
+        </a>
       <br><br>
       <a href="inscription.html" class="link-success d-flex justify-content-between">Inscrivez-vous</a>
       <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
