--- a/inscription.html
+++ b/inscription.html
@@ -40,7 +40,9 @@
         <label for="form-label" class="form-1">Confirmer votre mot de passe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" >
       </div>
-      <button type="submit" class="btn bg-success text-white col-md-6">Création du compte</button>
+      <a class="btn bg-success text-white col-md-6" href="index.html">
+        Création du compte
+        </a>
       <br><br>
       <a href="PageConnection.html" class="link-success d-flex justify-content-between">Vous avez déjà un compte ?</a>
       <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
