Mise a jour de la page de connection

--- a/questions.html
+++ b/questions.html
@@ -21,7 +21,12 @@
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
-  <img src="img/LogoCPNV.png" style="max-width: 50vh" />
+  <div class="col-md-4">
+    <img src="img/LogoCPNV.png" style="max-width: 50vh" />
+  </div>
+  <div class="col-md-1">
+    <img src="img/1x/Plan de travail 1.png" style="height: 80vh" />
+  </div>
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
           <br><br>
