--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -20,7 +20,7 @@
   <body classe="container align-items-center">
       
     <div
-    class="col-11">
+    class="col-11 ">
     <h1 class="text-success display-1 text-center p-5 ">Page Admin</h1>
     <h2 class="text-success">Rechercher un compte</h2>
     <div class="input-group">
@@ -33,7 +33,8 @@
         </button>
       </div>
       <br>
-    <table class="table table-sm  border-success ">
+    <div class="row justify-content-center">
+    <table class="table table-sm  border-success">
         <thead class="table-success text-white">
           <tr classe="">
             <th scope="col ">Name</th>
@@ -87,6 +88,7 @@
           
         </tbody>
       </table>
+    </div>
     </div>
   </body>
 
