--- a/inscription.html
+++ b/inscription.html
@@ -29,14 +29,18 @@
   </div>
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
-        <div class="btn-group" role="group">
-            <button type="button" class="btn btn-success">Enseignent</button>
-            <button type="button" class="btn btn-success">Eleve</button>
-          </div>
           <br><br>
         <label for="form-label" class="form-1">Adresse email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
+      <select name="pets" id="pet-select">
+        <option value="sm-c1a">SM-C1a</option>
+        <option value="sm-c1b">SM-C1b</option>
+        <option value="sm-c1c">SM-C1c</option>
+        <option value="sm-c2a">SM-C2a</option>
+        <option value="sm-c2b">Autres</option>
+    </select>
+    <br>
       <div class="mb-3 col-md-9">
         <label for="form-label" class="form-1">Mot de passe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" >
