--- a/PageConnection.html
+++ b/PageConnection.html
@@ -37,10 +37,18 @@
         <input type="password" class="form-control" id="exampleInputPassword1" >
 
       </div>
-      <div class="mb-3 form-check">
-        <input type="radio" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Se souvenir de moi</label>
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="flexCheckDefault"
+        />
+        <label class="form-check-label" for="flexCheckDefault">
+          Se souvenir de moi
+        </label>
       </div>
+      <br>
       <a class="btn bg-success text-white col-md-6" href="index.html">
         Connexion
         </a>
