Correction Font couleur

--- a/Service.html
+++ b/Service.html
@@ -20,9 +20,11 @@
   <body classe="container align-items-center">
       
     <div
-      class="col-11 ">
-      <h1 class="text-success display-1  p-5 ">Nos services</h1>
-      <p class="display-1  p-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      class="col-12 ">
+      <h1 class="text-success display-1" style="padding:160px 0px 0px 140px;">Nos services</h1>
+  </div>
+  <div class="col-10" style="padding:0px 0px 0px 140px ;">
+      <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
     </div>
   </body>
 
