--- a/inscription.html
+++ b/inscription.html
@@ -17,7 +17,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body classe="container">
+  <body classe="container" style="font-family:Open Sans;">
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
@@ -30,7 +30,7 @@
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
           <br><br>
-        <label for="form-label" class="form-1">Adresse email</label>
+        <label for="form-label" class="form-1" style="font-weight: bold; padding-bottom:5px;">Adresse email</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
       </div>
       <select name="pets" id="pet-select">
@@ -42,19 +42,21 @@
     </select>
     <br>
       <div class="mb-3 col-md-9">
-        <label for="form-label" class="form-1">Mot de passe</label>
+        <label for="form-label" class="form-1" style="font-weight: bold; padding-bottom:5px;">Mot de passe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" >
       </div>
       <div class="mb-3 col-md-9">
-        <label for="form-label" class="form-1">Confirmer votre mot de passe</label>
+        <label for="form-label" class="form-1" style="font-weight: bold; padding-bottom:5px;">Confirmer votre mot de passe</label>
         <input type="password" class="form-control" id="exampleInputPassword1" >
       </div>
-      <a class="btn bg-success text-white col-md-6" href="index.html">
+      <a class="btn text-white col-md-6" href="index.html" style="background-color:#01A659; font-weight: bold;" >
         Création du compte
         </a>
       <br><br>
-      <a href="PageConnection.html" class="link-success d-flex justify-content-between">Vous avez déjà un compte ?</a>
-      <a href="questions.html" class="link-success d-flex justify-content-end">Questions ?</a>
+      <a href="PageConnection.html" class=" d-flex justify-content-between" style="color:#01A659">Vous avez déjà un compte ?</a>
+      <div class="col-md-9">
+      <a href="questions.html" class=" d-flex justify-content-end" style="color:#01A659">Questions ?</a>
+    </div>
     </form>
     </div>
   </body>
