--- a/message.html
+++ b/message.html
@@ -17,7 +17,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body classe="container">
+  <body classe="container" style="font-family:Open Sans;">
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
@@ -31,7 +31,7 @@
       <b>Votre message à bien été envoyé !</b>
         <p>Nous allons vous répondre le plus rapidement possible.</p>
       <div class="mb-2 col-md-9">
-        <a class="btn bg-success text-white col-md-6" href="PageConnection.html">
+        <a class="btn text-white col-md-6" href="PageConnection.html" style="background-color:#01A659; font-weight: bold;">
         Revenir à la page de connection
         </a>
   </body>
