--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -17,25 +17,25 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body classe="container align-items-center">
+  <body classe="container align-items-center" style="font-family:Open Sans;">
       
     <div
-    class="col-11 ">
-    <h1 class="text-success display-1 text-center p-5 ">Page Admin</h1>
-    <h2 class="text-success">Rechercher un compte</h2>
+    class="col-11 " style="padding:0px 0px 0px 140px ;">
+    <h1 class="display-1 text-center p-5 " style="color:#01A659; font-weight:600;">Page admin</h1>
+    <h2 class="" style="color:#01A659;">Rechercher un compte</h2>
     <div class="input-group">
         <div class="form-outline">
           <input type="search" id="form1" class="form-control" />
           <label class="form-label" for="form1">Search</label>
         </div>
-        <button type="button" class="btn btn-success">
+        <button type="button" class="btn" style="background-color:#01A659;">
           <i class="fas fa-search"></i>
         </button>
       </div>
       <br>
     <div class="row justify-content-center">
-    <table class="table table-sm  border-success">
-        <thead class="table-success text-white">
+    <table class="table table-sm" style="border-color:#01A659;">
+        <thead class=" text-white" style="background-color:#01A659;">
           <tr classe="">
             <th scope="col ">Name</th>
             <th scope="col">Prénom</th>
