--- a/questions.html
+++ b/questions.html
@@ -17,7 +17,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body classe="container">
+  <body classe="container" style="font-family:Open Sans;">
     <div
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
@@ -30,13 +30,13 @@
     <form class="col-md-5" >
       <div class="mb-2 col-md-9">
           <br><br>
-        <label for="form-label" class="form-1">Adresse email</label>
+        <label for="form-label" class="form-1" style="font-weight: bold; padding-bottom:5px;">Adresse email</label>
         <div class="form-outline">
           <input type="password" id="typePassword" class="form-control" />
           <label class="form-label" for="typePassword">exemple</label>
         </div>
       </div>
-      <div class="mb-3 col-md-9">
+      <div class="mb-3 col-md-9" style="font-weight: bold; padding-bottom:5px;">
         Qu'elle est votre questions ?
         <br>
         <select name="pets" id="pet-select">
@@ -49,7 +49,8 @@
       <div class="form-outline">
         <textarea class="form-control" id="textAreaExample" rows="4">Ecrire un message.</textarea>
       </div>
-      <a class="btn bg-success text-white col-md-6" href="message.html">
+      <br>
+      <a class="btn text-white col-md-6 " href="message.html" style="background-color:#01A659; font-weight: bold;">
         Envoyer votre question
       </a>
 
