amélioration du header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="col-2"><img src="img/logo@2x.png"></div>
-        <div class="container-fluid col-2">
+        <div class="container-fluid col-4">
           <button
             class="navbar-toggler"
             type="button"
@@ -45,17 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="container-fluid">
-          <ul class="navbar-nav">
-            <!-- Badge -->
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span class="badge badge-pill bg-danger">1</span>
-                <span><i class="fas fa-shopping-cart"></i></span>
-              </a>
-            </li>
-          </ul>
-        </div>
+        <div class="col-1"><img src="img/Groupe 9.png"></div>
       </nav>
 
     </header>
