--- a/Service.html
+++ b/Service.html
@@ -26,6 +26,20 @@
   <div class="col-10" style="padding:0px 0px 0px 140px ;">
       <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
     </div>
+    <div class="row " style="background-color:#EDEEEF">
+      <div class="col-md-3">
+        First in DOM, no order applied
+      </div>
+      <div class="col-md-3 order-1">
+        Second in DOM, with a larger order
+      </div>
+      <div class="col-md-3 order-3">
+        Third in DOM, with an order of 1
+      </div>
+      <div class="col-md-3 order-4">
+        Third in DOM, with an order of 1
+      </div>
+    </div>
   </body>
 
   <!-- MDB -->
