--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
               <a class="nav-link" href="#">Services</a>
               <a class="nav-link" href="#">Nous contacter</a>
+              <a class="nav-link" href="#">Admin</a>
+              <a class="nav-link" href="#">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
