--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Material Design for Bootstrap</title>
+    <title>Page accueil</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
@@ -18,11 +18,11 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body>
+  <body style="font-family:Open Sans;">
     <!-- Start your project here-->
-    <header>
+    <header class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-2"><img src="img/logo@2x.png"></div>
+        <div class="col-2 test1"><img src="img/logo@2x.png"></div>
         <div class="container-fluid col-4">
           <button
             class="navbar-toggler"
@@ -141,11 +141,15 @@
         Nous espérons que nos produits et services vous seront utiles</br>
       </p>
     </div>
-    <div class="col-md-6 offset-md-3 text-center">
+    <div class="col-md-6 offset-md-3 text-center" id="text-bas">
     <p>En cas de question, problème technique, ou pour de nouvelles idées de produits et services utiles pour les élèves, enseignants et maîtres de classe, vous pouvez nous contacter au moyen de l’email:</p>
     </div>
     </main>
-          
+  <footer>
+    <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : 
+      <strong>espace.pao@mediamatique.ch</strong></p>
+
+  </footer>
 </body>
 
         <!-- MDB -->
