modification de truc

--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -18,7 +18,37 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
   <body classe="container align-items-center" style="font-family:Open Sans;">
-      
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="col-2"><img src="img/logo@2x.png"></div>
+        <div class="container-fluid col-4">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#">Nous contacter</a>
+              <a class="nav-link" href="#">Admin</a>
+              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-1"><img src="img/Groupe 9.png"></div>
+      </nav>
+
+    </header>
     <div
     class="col-11 " style="padding:0px 0px 0px 140px ;">
     <h1 class="display-1 text-center p-5 " style="color:#01A659; font-weight:600;">Page admin</h1>
