--- a/Service.html
+++ b/Service.html
@@ -17,27 +17,60 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
-  <body classe="container align-items-center">
-      
+  <body classe="container align-items-center" style="font-family:Open Sans;">
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="col-2"><img src="img/logo@2x.png"></div>
+        <div class="container-fluid col-4">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#">Nous contacter</a>
+              <a class="nav-link" href="#">Admin</a>
+              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-1"><img src="img/Groupe 9.png"></div>
+      </nav>
+
+    </header> 
     <div
       class="col-12 ">
-      <h1 class="text-success display-1" style="padding:160px 0px 0px 140px;">Nos services</h1>
+      <h1 class=" display-1" style="padding:160px 0px 0px 140px; color:#01A659; font-weight: 500;">Nos services</h1>
   </div>
   <div class="col-10" style="padding:0px 0px 0px 140px ;">
       <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
     </div>
-    <div class="row " style="background-color:#EDEEEF">
-      <div class="col-md-3">
-        First in DOM, no order applied
-      </div>
-      <div class="col-md-3 order-1">
-        Second in DOM, with a larger order
-      </div>
-      <div class="col-md-3 order-3">
-        Third in DOM, with an order of 1
-      </div>
-      <div class="col-md-3 order-4">
-        Third in DOM, with an order of 1
+    </div>
+    <div class="container" >
+      <div class="row g-2">
+        <div class="col-3" >
+          <div class="p-3"style="background-color:#EDEEEF; ">Cartes de visites</div>
+        </div>
+        <div class="col-3">
+          <div class="p-3" style="background-color:#EDEEEF;">Etiquettes</div>
+        </div>
+        <div class="col-3">
+          <div class="p-3" style="background-color:#EDEEEF;">Casiers pour mobiles</div>
+        </div>
+        <div class="col-3">
+          <div class="p-3" style="background-color:#EDEEEF;">Plannings de nettoyages</div>
+        </div>
       </div>
     </div>
   </body>
