Page Service et debut page Carte

--- a/Service.html
+++ b/Service.html
@@ -35,11 +35,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="Service.html">Services</a>
               <a class="nav-link" href="#">Nous contacter</a>
-              <a class="nav-link" href="#">Admin</a>
-              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link" href="pageAdmin.html">Admin</a>
+              <a class="nav-link" href="pageCommande.html">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
@@ -50,27 +50,42 @@
 
     </header> 
     <div
-      class="col-12 ">
-      <h1 class=" display-1" style="padding:160px 0px 0px 140px; color:#01A659; font-weight: 500;">Nos services</h1>
+      class="col-12 container">
+      <h1 class=" display-1 p-3" style="color:#01A659; font-weight: 500;">Nos services</h1>
   </div>
-  <div class="col-10" style="padding:0px 0px 0px 140px ;">
-      <p class="p-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
+  <div class="col-12 container" style="">
+      <p class="p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
     </div>
     </div>
     <div class="container" >
       <div class="row g-2">
         <div class="col-3" >
-          <div class="p-3"style="background-color:#EDEEEF; ">Cartes de visites</div>
+          <div class="p-3"style="background-color:#EDEEEF; "><img src="img/Carte.jpg" style="width: 20vw">Cartes de visites<br>
+            <a class="btn text-white col-md-6" href="CartesDeVisites.html" style="background-color:#01A659; font-weight: bold;" >
+              Commander
+              </a>
+            </div>
         </div>
         <div class="col-3">
-          <div class="p-3" style="background-color:#EDEEEF;">Etiquettes</div>
+          <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Etiquette.jpg" style="width: 20vw">Etiquettes<br>
+            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+              Commander
+              </a>
+            </div>
         </div>
         <div class="col-3">
-          <div class="p-3" style="background-color:#EDEEEF;">Casiers pour mobiles</div>
+          <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Casierdetelephone.jpg" style="width: 20vw">Casiers pour mobiles
+            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+              Commander
+              </a>
+            </div>
         </div>
         <div class="col-3">
-          <div class="p-3" style="background-color:#EDEEEF;">Plannings de nettoyages</div>
-        </div>
+          <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Planning2.jpg" style="width: 20vw">Plannings de nettoyages
+            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+            Commander
+            </a></div>
+</div>
       </div>
     </div>
   </body>
