--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -35,11 +35,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="Service.html">Services</a>
               <a class="nav-link" href="#">Nous contacter</a>
-              <a class="nav-link" href="#">Admin</a>
-              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link" href="pageAdmin.html">Admin</a>
+              <a class="nav-link" href="pageCommande.html">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
