--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Page accueil</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- MDB icon -->
-    <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/" type="image/x-icon" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -22,8 +22,9 @@
     <!-- Start your project here-->
     <header class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-2 test1"><img src="img/logo@2x.png"></div>
-        <div class="container-fluid col-4">
+        <div class="col-1"></div>
+        <div class="col-2"><img src="img/logocpnvpng.png"></div>
+        <div class="container-fluid col-6">
           <button
             class="navbar-toggler"
             type="button"
@@ -36,8 +37,8 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <div class="navbar-nav d-flex justify-content-between">
+              <a class="nav-link active" href="#">Home</a>
               <a class="nav-link" href="#">Services</a>
               <a class="nav-link" href="#">Nous contacter</a>
               <a class="nav-link" href="#">Admin</a>
@@ -47,7 +48,7 @@
             </div>
           </div>
         </div>
-        <div class="col-1"><img src="img/Groupe 9.png"></div>
+        <div class="col-1" id="logo"><img src="img/Icon metro-profile.svg"></div>
       </nav>
 
     </header>
@@ -143,12 +144,12 @@
     </div>
     <div class="col-md-6 offset-md-3 text-center" id="text-bas">
     <p>En cas de question, problème technique, ou pour de nouvelles idées de produits et services utiles pour les élèves, enseignants et maîtres de classe, vous pouvez nous contacter au moyen de l’email:</p>
+    <p>espace.pao@mediamatique.ch</p>
     </div>
     </main>
   <footer>
-    <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : 
+    <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
       <strong>espace.pao@mediamatique.ch</strong></p>
-
   </footer>
 </body>
 
