--- a/Etiquette.html
+++ b/Etiquette.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>PageCarteDeVisite</title>
+    <title>PageEtiquette</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -51,36 +51,27 @@
     </header> 
     <div
       class="col-12 container">
-      <h1 class=" display-3" style="color:#01A659; font-weight: 500;">Cartes de visites</h1>
+      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:1em;">Etiquettes</h1>
   </div>
-  <div class="col-12 container" style="">
+  <div class="col-12 container" style="padding-bottom:2em;">
     <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
   </div>
+
   <div
     class="col-12 container">
-    <h2 class="" style="color:#01A659;">Choix du type de carte</h1>
+    <h2 class="" style="color:#01A659;">Choix du type d'étiquettes</h1>
     <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
   </div>
 <div class="container" >
     <div class="row g-2">
         <div class="col-3" >
             <div class="col-2">
-                <div class="p-3"><img src="img/CarteDeVisite/Carte01.jpg" style="width: 20vw"></div>
+                <div class="p-3"><img src="img/Etiquette/Etiquette01.jpg" style="width: 20vw"></div>
             </div>
         </div>
         <div class="col-3" >
             <div class="col-2">
-                <div class="p-3"><img src="img/CarteDeVisite/Carte02.jpg" style="width: 20vw"></div>
-            </div>
-        </div>
-        <div class="col-3" >
-            <div class="col-2">
-                <div class="p-3"><img src="img/CarteDeVisite/Carte03.jpg" style="width: 20vw"></div>
-            </div>
-        </div>
-        <div class="col-3" >
-            <div class="col-2">
-                <div class="p-3"><img src="img/CarteDeVisite/Carte04.jpg" style="width: 20vw"></div>
+                <div class="p-3"><img src="img/Etiquette/Etiquette02.jpg" style="width: 20vw"></div>
             </div>
         </div>
     </div>
