--- a/Service.html
+++ b/Service.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>PageAdmin</title>
+    <title>PageService</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
@@ -68,7 +68,7 @@
         </div>
         <div class="col-3">
           <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Etiquette.jpg" style="width: 20vw">Etiquettes<br>
-            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+            <a class="btn text-white col-md-6" href="Etiquette.html" style="background-color:#01A659; font-weight: bold;" >
               Commander
               </a>
             </div>
