--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               class="d-block w-100"
               alt="..."
             />
-            <div class="carousel-caption d-none d-md-block align-items-center">
+            <div class="carousel-caption d-none d-md-flex justify-content-center align-items-center " style="bottom: 0%; width:100%; height: 100%; flex-direction: column; right:auto; left :auto;">
               <h2>Bienvenue dans l’Espace entreprise-PAO</h2>
               <p>Découvrez les différentes possibilités qui s'offre à vous.</p>
             </div>
@@ -90,7 +90,7 @@
               class="d-block w-100"
               alt="..."
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-flex justify-content-center align-items-center" style="bottom: 0%; width:100%; height: 100%; flex-direction: column; right:auto; left :auto;">
               <h2>Ici, commandez un large choix de produits</h2>
             </div>
           </div>
@@ -102,7 +102,7 @@
               class="d-block w-100"
               alt="..."
             />
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-md-flex justify-content-center align-items-center" style="bottom: 0%; width:100%; height: 100%; flex-direction: column; right:auto; left :auto;">
               <h5></h5>
               <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
             </div>
