--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav d-flex justify-content-between">
-              <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Services</a>
-              <a class="nav-link" href="#">Nous contacter</a>
+              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link" href="Service.html">Services</a>
               <a class="nav-link" href="#">Admin</a>
               <a class="nav-link" href="#">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
@@ -73,7 +72,7 @@
           <!-- Single item -->
           <div class="carousel-item active">
             <img
-              src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).jpg"
+              src="img/carousel/cartedevisistes.png"
               class="d-block w-100"
               alt="..."
             />
@@ -86,12 +85,13 @@
           <!-- Single item -->
           <div class="carousel-item">
             <img
-              src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg"
+              src="img/carousel/"
               class="d-block w-100"
               alt="..."
             />
             <div class="carousel-caption d-none d-md-flex justify-content-center align-items-center" style="bottom: 0%; width:100%; height: 100%; flex-direction: column; right:auto; left :auto;">
               <h2>Ici, commandez un large choix de produits</h2>
+              <p>Nous répendrons à vos demande dans les plus bref délais.</p>
             </div>
           </div>
 
@@ -103,8 +103,8 @@
               alt="..."
             />
             <div class="carousel-caption d-md-flex justify-content-center align-items-center" style="bottom: 0%; width:100%; height: 100%; flex-direction: column; right:auto; left :auto;">
-              <h5></h5>
-              <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              <h2>Une interface intuitive et simple</h2>
+              <p>Découvrez votre site d'impression !</p>
             </div>
           </div>
         </div>
