--- a/Service.html
+++ b/Service.html
@@ -7,6 +7,7 @@
     <title>PageService</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -51,9 +52,9 @@
     </header> 
     <div
       class="col-12 container">
-      <h1 class=" display-1 p-3" style="color:#01A659; font-weight: 500;">Nos services</h1>
+      <h1 class=" display-1" style="color:#01A659; font-weight: 500; padding-top: 5vw;">Nos services</h1>
   </div>
-  <div class="col-12 container" style="">
+  <div class="col-12 container">
       <p class="p-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
     </div>
     </div>
