--- a/pageCommande.html
+++ b/pageCommande.html
@@ -7,6 +7,7 @@
     <title>PageCommande</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -48,10 +49,11 @@
         <div class="col-1"><img src="img/Groupe 9.png"></div>
       </nav>
 
-    </header> 
+    </header>
+    <main style="padding-bottom:6vw;">
     <div
       class="col-11 " style="padding:0px 0px 0px 140px ;">
-      <h1 class=" display-1 text-center p-5 " style="color:#01A659; font-weight:600;">Page commande</h1>
+      <h1 class="display-1 text-center " style="color:#01A659; font-weight:600; padding-top: 10vw;">Page commande</h1>
       <h2 class=" " style="color:#01A659;">Toute les commandes</h2>
       <div class="input-group">
           <div class="form-outline">
@@ -122,6 +124,11 @@
       </div>
       </div>
     </div>
+  </main>
+    <footer>
+      <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
+        <strong>espace.pao@mediamatique.ch</strong></p>
+    </footer>
   </body>
 
   <!-- MDB -->
