--- a/Etiquette.html
+++ b/Etiquette.html
@@ -7,6 +7,7 @@
     <title>PageEtiquette</title>
     <!-- MDB icon -->
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -48,10 +49,11 @@
         <div class="col-1"><img src="img/Groupe 9.png"></div>
       </nav>
 
-    </header> 
+    </header>
+    <main style="padding-bottom:6vw;"> 
     <div
       class="col-12 container">
-      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:1em;">Etiquettes</h1>
+      <h1 class=" display-3" style="color:#01A659; font-weight: 500; padding-top:2em;">Etiquettes</h1>
   </div>
   <div class="col-12 container" style="padding-bottom:2em;">
     <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt, lorem at interdum eleifend, turpis dui rhoncus tellus, quis fermentum metus justo in elit. Suspendisse varius viverra nisi aliquet pulvinar. Aliquam sollicitudin accumsan sapien ac maximus. Praesent at justo congue ligula porta hendrerit quis vitae leo. Donec at lorem porta, tincidunt eros sollicitudin, fermentum arcu. Nunc a commodo eros. Cras eu dolor mollis, aliquet tellus eget, accumsan mauris. Aenean eu iaculis massa. Suspendisse volutpat semper mi vitae elementum. </p>
@@ -66,28 +68,19 @@
     <div class="row g-2">
         <div class="col-3" >
             <div class="col-2">
-                <div class="p-3"><img src="img/Etiquette/Etiquette01.jpg" style="width: 20vw"></div>
+                <button type="button" class="p-3 btn btn-link"><img src="img/Etiquette/Etiquette01.jpg" style="width: 20vw"></button>
             </div>
         </div>
         <div class="col-3" >
             <div class="col-2">
-                <div class="p-3"><img src="img/Etiquette/Etiquette02.jpg" style="width: 20vw"></div>
+                <button type="button" class="p-3 btn btn-link"><img src="img/Etiquette/Etiquette02.jpg" style="width: 20vw"></button>
             </div>
         </div>
     </div>
 </div>
   <div class="container">
   <div class="d-flex justify-content-end">
-      <div style="label {
-        display: block;
-        font: 1rem 'Fira Sans', sans-serif;
-    }
-    
-    input,
-    label {
-        margin: .4rem 0;
-    }
-    ">
+      <div>
 <input type="number" id="tentacles" name="tentacles"
        min="10" max="50" step="10">
 
@@ -97,6 +90,11 @@
         </a>
   </div>
 </div>
+</main>
+<footer>
+  <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
+    <strong>espace.pao@mediamatique.ch</strong></p>
+</footer>
   </body>
 
   <!-- MDB -->
