--- a/pageAdmin.html
+++ b/pageAdmin.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>PageAdmin</title>
     <!-- MDB icon -->
+        <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
@@ -18,10 +19,11 @@
     <link rel="stylesheet" href="css/mdb.min.css" />
   </head>
   <body classe="container align-items-center" style="font-family:Open Sans;">
-    <header>
+    <header class="col-12">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="col-2"><img src="img/logo@2x.png"></div>
-        <div class="container-fluid col-4">
+        <div class="col-1"></div>
+        <div class="col-2"><img src="img/logocpnvpng.png"></div>
+        <div class="container-fluid col-6">
           <button
             class="navbar-toggler"
             type="button"
@@ -34,24 +36,25 @@
             <i class="fas fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              <a class="nav-link" href="Service.html">Services</a>
+            <div class="navbar-nav d-flex justify-content-between">
+              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="#">Services</a>
               <a class="nav-link" href="#">Nous contacter</a>
-              <a class="nav-link" href="pageAdmin.html">Admin</a>
-              <a class="nav-link" href="pageCommande.html">Commande</a>
+              <a class="nav-link" href="#">Admin</a>
+              <a class="nav-link" href="#">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
           </div>
         </div>
-        <div class="col-1"><img src="img/Groupe 9.png"></div>
+        <div class="col-1" id="logo"><img src="img/Icon metro-profile.svg"></div>
       </nav>
 
     </header>
+    <main style="padding-bottom:6vw;">
     <div
     class="col-11 " style="padding:0px 0px 0px 140px ;">
-    <h1 class="display-1 text-center p-5 " style="color:#01A659; font-weight:600;">Page admin</h1>
+    <h1 class="display-1 text-center " style="color:#01A659; font-weight:600; padding-top: 10vw;">Page admin</h1>
     <h2 class="" style="color:#01A659;">Rechercher un compte</h2>
     <div class="input-group">
         <div class="form-outline">
@@ -120,6 +123,11 @@
       </table>
     </div>
     </div>
+  </main>
+    <footer>
+      <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
+        <strong>espace.pao@mediamatique.ch</strong></p>
+    </footer>
   </body>
 
   <!-- MDB -->
