--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <div class="navbar-nav d-flex justify-content-between">
               <a class="nav-link active" href="index.html">Home</a>
               <a class="nav-link" href="Service.html">Services</a>
-              <a class="nav-link" href="#">Admin</a>
-              <a class="nav-link" href="#">Commande</a>
+              <a class="nav-link" href="pageAdmin.html">Admin</a>
+              <a class="nav-link" href="pageCommande.html">Commande</a>
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a
               >
             </div>
@@ -85,7 +85,7 @@
           <!-- Single item -->
           <div class="carousel-item">
             <img
-              src="img/carousel/"
+              src="img/carousel/imagedumec.png"
               class="d-block w-100"
               alt="..."
             />
