--- a/Service.html
+++ b/Service.html
@@ -49,7 +49,8 @@
         <div class="col-1" id="logo"><img src="img/Icon metro-profile.svg"></div>
       </nav>
 
-    </header> 
+    </header>
+    <main style="padding-bottom:6vw;">
     <div
       class="col-12 container">
       <h1 class=" display-1" style="color:#01A659; font-weight: 500; padding-top:1.5em;">Nos services</h1>
@@ -76,19 +77,24 @@
         </div>
         <div class="col-3">
           <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Casierdetelephone.jpg" style="width: 20vw">Casiers pour mobiles
-            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+            <a class="btn text-white col-md-6" href="Casier.html" style="background-color:#01A659; font-weight: bold;" >
               Commander
               </a>
             </div>
         </div>
         <div class="col-3">
           <div class="p-3" style="background-color:#EDEEEF;"><img src="img/Planning2.jpg" style="width: 20vw">Plannings de nettoyages
-            <a class="btn text-white col-md-6" href="#" style="background-color:#01A659; font-weight: bold;" >
+            <a class="btn text-white col-md-6" href="Planning.html" style="background-color:#01A659; font-weight: bold;" >
             Commander
             </a></div>
 </div>
       </div>
     </div>
+  </main>
+  <footer>
+    <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
+      <strong>espace.pao@mediamatique.ch</strong></p>
+  </footer>
   </body>
 
   <!-- MDB -->
