--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           >
             <i class="fas fa-bars"></i>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse  d-md-flex justify-content-between" id="navbarNavAltMarkup">
             <div class="navbar-nav d-flex justify-content-between">
               <a class="nav-link active" href="index.html">Home</a>
               <a class="nav-link" href="Service.html">Services</a>
