--- a/questions.html
+++ b/questions.html
@@ -22,7 +22,7 @@
   class="border d-flex align-items-center justify-content-end"
   style="height: 100vh;">
   <div class="col-md-4">
-    <img src="img/LogoCPNV.png" style="max-width: 50vh" />
+    <img src="img/logocpnvpng.png" style="height: 12vw"  />
   </div>
   <div class="col-md-1">
     <img src="img/1x/Plan de travail 1.png" style="height: 80vh" />
