Rajouter la page Impression

--- a/Planning.html
+++ b/Planning.html
@@ -86,7 +86,7 @@
 </main>
 <footer>
     <p>Souscrivez à notre newsletter en nous indiquant votre email à l’adresse : <br>
-      <strong>espace.pao@mediamatique.ch</strong></p>
+      <strong><a href="mailto:espace.pao@mediamatique.ch">espace.pao@mediamatique.ch</a></strong></p>
   </footer>
   </body>
 
